html overflow fixed

--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
+html {
+  overflow-x: hidden;
+}
+
 body {
   font-family: Helvetica, Arial, sans-serif;
+  overflow-x: hidden;
 }
 
 .header-section {
